--- a/main/plugins/org.talend.designer.components.localprovider/components/tFileOutputExcel/tFileOutputExcel_messages.properties
+++ b/main/plugins/org.talend.designer.components.localprovider/components/tFileOutputExcel/tFileOutputExcel_messages.properties
@@ -90,3 +90,4 @@ FLUSHONROW.NAME=Custom the flush buffer size
 FLUSHONROW_NUM.NAME=Row number
 RECALCULATE_FORMULA.NAME=Recalculate formula
 TRUNCATE_EXCEEDING_CHARACTERS.NAME=Truncate characters exceeding max cell length
+USE_SHARED_STRINGS_TABLE.NAME=Use shared strings table
