feat(TUP-37353):Guess Schema for tBigQueryInput

--- a/main/plugins/org.talend.designer.core/plugin.xml
+++ b/main/plugins/org.talend.designer.core/plugin.xml
@@ -613,6 +613,11 @@
         class="org.talend.designer.core.ui.editor.properties.controllers.generator.SapSchemaTypeGenerator"
         mapping="SAP_SCHEMA_TYPE"
         name="Sap Schema Type">
+  </generator>
+  <generator
+        class="org.talend.designer.core.ui.editor.properties.controllers.dynamic.DynamicGuessSchemaGenerator"
+        mapping="DYNAMIC_GUESS_SCHEMA"
+        name="Dynamic Guess Schema">
   </generator>   
    </extension>
    <extension
