--- a/main/plugins/org.talend.designer.components.localprovider/components/tBigQueryInput/tBigQueryInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.localprovider/components/tBigQueryInput/tBigQueryInput_messages.properties
@@ -26,5 +26,6 @@ USE_CUSTOM_TEMPORARY_DATASET.NAME=Use custom temporary Dataset name
 TEMPORARY_DATASET_NAME.NAME=Temporary Dataset name
 USE_LEGACY_SQL.NAME=Use Legacy SQL
 JOBID.NAME=BigQuery JobId
+GUESS_SCHEMA.NAME=Guess Schema
 STATISTICS.NAME=Statistics of the main query
 STATISTICS_CHILD.NAME=Statistics of child queries
