--- a/main/plugins/org.talend.designer.components.localprovider/components/tBigQueryOutput/tBigQueryOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.localprovider/components/tBigQueryOutput/tBigQueryOutput_messages.properties
@@ -70,3 +70,8 @@ GS_ACCESS_TOKEN.NAME=OAuth Access Token
 JOBID.NAME=BigQuery JobId
 STATISTICS.NAME=Statistics of the main query
 USE_12_HOUR_FORMAT.NAME=Use 12-hour format for dynamic columns
+
+REGION_ENDPOINT_GROUP.NAME=Region and Endpoint
+USE_REGION_ENDPOINT.NAME=Use a custom region endpoint
+REGION_ENDPOINT_GS.NAME=Google Storage Private API URL
+REGION_ENDPOINT_BQ.NAME=Google BigQuery Private API URL
